--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,6 +1,6 @@
-name: Your Name
-studentNumber: z1234567
-officialEmail: noIdea@unsw.edu.au
+name: Justine Zhang
+studentNumber: z5260917
+officialEmail: z5260917@unsw.edu.au
 contactEmail:
-  firstBit: firstName.Lastname  # this avoids spam, the @ is implied
+  firstBit: justine.zhang # this avoids spam, the @ is implied
   otherBit: whereIwork.com
