--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,6 +1,6 @@
 name: Justine Zhang
 studentNumber: z5260917
-officialEmail: z5260917@unsw.edu.au
+officialEmail: z5260917@ad.unsw.edu.au
 contactEmail:
   firstBit: justine.zhang # this avoids spam, the @ is implied
   otherBit: whereIwork.com
